[package]
name = "openskill"
version = "0.0.1"
description = "Rust implementation of OpenSkill (license free TrueSkill)"
edition = "2021"
license = "MIT"
keywords = ["gamedev", "rating"]
    
[dependencies]
itertools = "0.12.0"
rand_distr = "0.4.3"
statrs = "0.16.0"
thiserror = "1.0.50"

[dev-dependencies]
approx = "0.5.1"
